--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.13"
 django = "^5.2.4"
+langchain-google-genai = "^2.1.9"
+pydantic = "^2.11.7"
+python-dotenv = "^1.1.1"
 
 
 [build-system]
