--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^5.2.4"
 langchain-google-genai = "^2.1.9"
 pydantic = "^2.11.7"
 python-dotenv = "^1.1.1"
+requests = "^2.32.4"
+django-cron = "^0.6.0"
 
 
 [build-system]
