--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,9 @@ langchain-google-genai = "^2.1.9"
 pydantic = "^2.11.7"
 python-dotenv = "^1.1.1"
 requests = "^2.32.4"
-django-cron = "^0.6.0"
 gunicorn = "^23.0.0"
 honcho = "^2.0.0"
+django-crontab = "^0.7.1"
 
 
 [build-system]
